# TransferSimple

./: .gitignore  CMakeLists.txt  qml.qrc
WidgetClient/: CMakeLists.txt  resource.qrc  transferEasy.md
WidgetClient/src/: ClientFileListWidget.cpp  ClientFileListWidget.hpp  DirectoryHandler.cpp  DirectoryHandler.hpp  DownloadProgressWidget.cpp  DownloadProgressWidget.hpp  FileListItem.cpp  FileListItem.hpp  FileListWidget.cpp  FileListWidget.hpp  FileTransferHandler.cpp  FileTransferHandler.hpp  HttpSessionManager.cpp  HttpSessionManager.hpp  MainWindow.cpp  MainWindow.hpp  NetworkConfigDialog.cpp  NetworkConfigDialog.hpp  ServerFileListWidget.cpp  ServerFileListWidget.hpp  main.cpp
src/: SecCodeGenerator.cpp  SecCodeGenerator.hpp  draft.md  fileHandle.cpp  fileHandle.hpp  main.cpp  main.qml
